# routes/api.php
@@ -10,10 +10,12 @@ use App\Http\Controllers\API\HomeController;
 | API Routes
 |--------------------------------------------------------------------------
 */
-
-Route::post('login', [AuthController::class, 'signin']);
-Route::post('login_mobile', [AuthController::class, 'signin_mobile']);
-Route::post('register', [AuthController::class, 'signup']);
+     
+Route::middleware(['throttle'])->group( function () {
+    Route::post('login', [AuthController::class, 'signin']);
+    Route::post('login_mobile', [AuthController::class, 'signin_mobile']);
+    Route::post('register', [AuthController::class, 'signup']);
+});
      
 Route::middleware(['auth:sanctum', 'throttle'])->group( function () {
     Route::get('index', [HomeController::class,'index']);
